Wed Oct  5 18:02:44 2016  SHIBATA Hiroshi  <hsbt@ruby-lang.org>

	* lib/net/http/response.rb: Improve document readability.
	  [fix GH-1411][ci skip] Patch by @stz-seongheon

Wed Oct  5 15:43:32 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* node.c (dump_node): flatten statements in NODE_BLOCK.

Wed Oct  5 14:27:36 2016  Byron Bowerman  <me@bm5k.com>

	* range.c: Add docs for max/min behavior with exclusive range.
	  [fix GH-1433][ci skip] Patch by @BM5k

Wed Oct  5 12:57:21 2016  Richard Schneeman  <richard.schneeman+foo@gmail.com>

	* ext/socket/*.c: Add proper require for example to work.
	  [fix GH-1378][ci skip] Patch by @schneems

Wed Oct  5 11:47:19 2016  SHIBATA Hiroshi  <hsbt@ruby-lang.org>

	* io.c: Fixed equivalent ruby code with core implemention.
	  [fix GH-1429][ci skip] Patch by @sos4nt

Wed Oct  5 11:36:21 2016  SHIBATA Hiroshi  <hsbt@ruby-lang.org>

	* lib/delegate.rb: Added missing spaces and Removed needless spaces.
	  [fix GH-1454][ci skip] Patch by @bogdanvlviv

Wed Oct  5 03:24:55 2016  Marc-Andre Lafortune  <ruby-core@marc-andre.ca>

	* enum.c: Make Enumerable#chunk with no block return
	  an Enumerator [#2172]

Wed Oct  5 01:19:45 2016  NAKAMURA Usaku  <usa@ruby-lang.org>

	* internal.h (ST2FIX): new macro to convert st_index_t to Fixnum.
	  a hash value of Object might be Bignum, but it causes many troubles
	  expecially the Object is used as a key of a hash.  so I've gave up
	  to do so.

	* array.c (rb_ary_hash): use above macro.

	* bignum.c (rb_big_hash): ditto.

	* hash.c (rb_obj_hash, rb_hash_hash): ditto.

	* numeric.c (rb_dbl_hash): ditto.

	* proc.c (proc_hash): ditto.

	* re.c (rb_reg_hash, match_hash): ditto.

	* string.c (rb_str_hash_m): ditto.

Tue Oct  4 12:59:44 2016  Koichi ITO  <koic.ito@gmail.com>

	* array.c (rb_ary_dig): [DOC] update an example of error message
	  by Array#dig, because of Integer Unification.  [Fix GH-1455]

Tue Oct  4 09:55:12 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>
